--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "kusama-balances",
+  "name": "squid-ink-template",
   "private": true,
   "scripts": {
-    "build": "rm -rf lib && tsc",
-    "update": "npx npm-check-updates --filter /subsquid/ --upgrade && npm i -f",
-    "db:migrate": "npx squid-typeorm-migration apply",
-    "processor:start": "node lib/processor.js",
-    "query-node:start": "squid-graphql-server",
-    "lint": "eslint . --ext .ts --ignore-path .gitignore --ignore-pattern src/abi/**/*  --fix"
+    "build": "rm -rf lib && tsc"
   },
   "dependencies": {
-    "@ethersproject/abi": "^5.7.0",
     "@subsquid/archive-registry": "2.1.9",
     "@subsquid/graphql-server": "3.3.2",
     "@subsquid/ink-abi": "^1.0.1",
@@ -19,7 +13,6 @@
     "@subsquid/typeorm-migration": "0.1.6",
     "@subsquid/typeorm-store": "0.2.2",
     "dotenv": "^16.0.3",
-    "ethers": "^5.7.0",
     "pg": "8.8.0",
     "typeorm": "^0.3.11"
   },
@@ -27,6 +20,7 @@
     "@subsquid/ink-typegen": "^0.2.0",
     "@subsquid/substrate-metadata-explorer": "^1.1.0",
     "@subsquid/typeorm-codegen": "^0.3.2",
+    "@subsquid/ink-squid-codegen": "^0.0.0",
     "@types/node": "^17.0.23",
     "typescript": "~4.6.2"
   }
