--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@subsquid/archive-registry": "2.1.9",
     "@subsquid/graphql-server": "3.3.2",
-    "@subsquid/ink-abi": "^1.0.1",
+    "@subsquid/ink-abi": "^1.1.0",
     "@subsquid/ss58": "^0.1.4",
     "@subsquid/substrate-processor": "2.4.1",
     "@subsquid/typeorm-migration": "0.1.6",
@@ -17,10 +17,10 @@
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
-    "@subsquid/ink-typegen": "^0.2.0",
-    "@subsquid/substrate-metadata-explorer": "^1.1.0",
-    "@subsquid/typeorm-codegen": "^0.3.2",
-    "@subsquid/ink-squid-codegen": "^0.0.0",
+    "@subsquid/ink-typegen": "^0.2.1",
+    "@subsquid/squid-gen-ink": "^0.1.1",
+    "@subsquid/substrate-metadata-explorer": "^1.1.2",
+    "@subsquid/typeorm-codegen": "^0.3.3",
     "@types/node": "^17.0.23",
     "typescript": "~4.6.2"
   }
